# algo

./: .clang-format  .clang-tidy  .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.MD  README.md  Summary  backlog.MD  doxyfile  main.cpp
algo/: CMakeLists.txt  algo.hpp
algo/include/: algo.hpp  algo_bit.hpp  algo_data_mining.hpp  algo_geometry.hpp  algo_geometry_ds.hpp  algo_graph.hpp  algo_greedy.hpp  algo_image.hpp  algo_image_basic.hpp  algo_image_detection.hpp  algo_image_feature.hpp  algo_image_filter.hpp  algo_image_object.hpp  algo_image_transform.hpp  algo_math.hpp  algo_network.hpp  algo_puzzle.hpp  algo_search.hpp  algo_sequence.hpp  algo_sort.hpp  algo_string.hpp  algo_transform.hpp
algo/src/: algo_data_mining.cpp  algo_geometry.cpp  algo_geometry_ds.cpp  algo_graph.cpp  algo_greedy.cpp  algo_image.cpp  algo_image_basic.cpp  algo_image_detection.cpp  algo_image_feature.cpp  algo_image_filter.cpp  algo_image_object.cpp  algo_image_transform.cpp  algo_math.cpp  algo_network.cpp  algo_puzzle.cpp  algo_search.cpp  algo_sequence.cpp  algo_sort.cpp  algo_string.cpp  algo_transform.cpp
data_mining/: CMakeLists.txt  README.md  data_mining_algorithms.cpp  data_mining_algorithms.hpp
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  io.cpp  io.hpp
examples/data_mining/: CMakeLists.txt  data_mining_examples.cpp  kmeans_example.cpp  kmeans_orange.ows
examples/data_mining/dbscan/: CMakeLists.txt  dbscan_example.cpp  dbscan_read_result.py
examples/data_mining/kmeans/: CMakeLists.txt  kmeans_example.cpp  kmeans_orange.ows  kmeans_read_result.py
examples/data_mining/knn/: CMakeLists.txt  knn_example.cpp  knn_orange.ows  knn_read_result.py
examples/data_mining/plot/: dbscan_plot.py  kmeans_plot.py  knn_plot.py
examples/data_mining/testfiles/: dbscan_in1.csv  dbscan_out1.csv  kmeans_in1.csv  kmeans_in2.csv  kmeans_out1.csv  kmeans_out2.csv  knn_labeled1.csv  knn_labeled2.csv  knn_out1.csv  knn_out2.csv  knn_unlabeled1.csv  knn_unlabeled2.csv
examples/geometry/: CMakeLists.txt  closest_pair_example.cpp  closest_pair_orange.ows  convex_hull_orange.ows  geometry_examples.cpp  qhull_example.cpp  qhull_orange.ows  triangulate_example.cpp  triangulate_orange.ows
examples/geometry/closest_pair/: CMakeLists.txt  closest_pair_example.cpp  closest_pair_orange.ows
examples/geometry/convex_hull/: CMakeLists.txt  convex_hull_read_result.py  qhull_example.cpp
examples/geometry/minimum_bounding_box/: CMakeLists.txt  mbbox_example.cpp  mbbox_read_result.py
examples/geometry/minimum_enclosing_circle/: CMakeLists.txt  mec_example.cpp
examples/geometry/plot/: closest_pair_plot.py  convex_hull_plot.py  etri_plot.py  mbbox_plot.py  mec_plot.py  triangulate_plot.py
examples/geometry/testfiles/: closest_pair_in1.csv  closest_pair_in2.csv  closest_pair_out1.csv  (+18 more)
examples/graph/: CMakeLists.txt  graph_examples.cpp  mst_data.py  mst_example.cpp  mst_read_result.py
examples/image/: CMakeLists.txt  image_helpers.cpp  image_helpers.hpp
examples/sort/: CMakeLists.txt  algo_sort_example.cpp
geometry/: CMakeLists.txt  Makefile  README.md  closest_pair.cc  geometry2d.cc  geometry_algorithms.cpp  geometry_algorithms.hpp  knn.cc  quickhull.cc  triangulation  triangulation.cc
geometry/tests/: Makefile  closest_pair_test.cc  intersection_test.cc  knn_test.cc  quickhull_test.cc  triangulation_test.cc
math/: CMakeLists.txt  README.md  euclidean.cc  fast_fourier_transform.cc  karatsuba.cc  mat_mult.cc  math_algorithms.cpp  math_algorithms.hpp  prime.cc~  prime.h~  prime_eratosthenes.cc  prime_eratosthenes.h  random_numbers.cc
math/tests/: Makefile  test_fft.cc  test_mat_mult.cc  test_random.cc
misc/find_the_word_game/: CMakeLists.txt  Makefile  README.md  dictionary1.txt  find_the_words.cpp  game1.txt  testfile.txt  visualize.cpp
network/: CMakeLists.txt  README.md  ford_fulkerson.cc  network_algorithms.cpp  network_algorithms.hpp  pagerank.cc
network/tests/: Makefile  test_ff.cc  test_pagerank.cc
sequence/: CMakeLists.txt  README.md  longest_incr_subsequence.cc  sequence_algorithms.cpp  sequence_algorithms.hpp
sequence/search/: README.md  k_max_min.cc
sequence/sort/: README.md  bubble_sort.cc  bucket_sort.cc  gnome_sort.cpp  insertion_sort.cc  merge_sort.cc  quicksort.cc
sequence/spell_checker/: README.md  dictionary.cc  dictionary.h  spell_checker.cc  spell_checker.h  word.cc  word.h
sequence/subsequence/: README.md  longest_incr_subsequence.cc
sequence/substrings/: Makefile  README.md  boyer_moore.cc  crossword_dict.cc  longest_common_substr.cc  rabin_karp.cc
sequence/tests/: test_longest_iss.cc
sort/: CMakeLists.txt  README.md  bubble_sort.cc  bucket_sort.cc  gnome_sort.cpp  heapsort.cc  insertion_sort.cc  merge_sort.cc  quicksort.cc  sort_algorithms.cpp  sort_algorithms.hpp
sort/tests/: Makefile  sort_tests.cc
string/: CMakeLists.txt  README.md  bitap.cpp  boyer_moore.cpp  longest_common_substr.cc  longest_common_substr.cpp  rabin_karp.cpp  string_algorithms.cpp  string_algorithms.h  string_algorithms.hpp
test/: CMakeLists.txt  gtest.cmake  test_aglo_puzzle.cpp  test_alglo_image_object.cpp  test_algo_bit.cpp  test_algo_data_mining.cpp  test_algo_geometry.cpp  test_algo_geometry_ds.cpp  test_algo_graph.cpp  test_algo_greedy.cpp  test_algo_image.cpp  test_algo_image_basic.cpp  test_algo_image_feature.cpp  test_algo_image_filter.cpp  test_algo_image_object.cpp  test_algo_math.cpp  test_algo_network.cpp  test_algo_puzzle.cpp  test_algo_search.cpp  test_algo_sequence.cpp  test_algo_sort.cpp  test_algo_string.cpp  test_algo_transform.cpp  test_data_mining_algorithms.cpp  test_geometry_algorithms.cpp  test_greedy_algorithms.cpp  test_math_algorithms.cpp  test_network_algorithms.cpp  test_search_algorithms.cpp  test_sequence_algorithms.cpp  test_sort_algorithms.cpp  test_sorting_bubble_sort.cpp  test_sorting_merge_sort.cpp  test_string.cpp  test_string_algorithms.cpp  test_string_bitap.cpp  test_string_boyer_more.cpp  test_string_longest_common_substr.cpp  test_string_rabin_karp.cpp  test_transform_algorithms.cpp
(+335 files in other folders)
