# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(algo)

include_directories(data_mining)
add_subdirectory(data_mining)

include_directories(geometry)
add_subdirectory(geometry)

include_directories(graph)
add_subdirectory(graph)

include_directories(image)
add_subdirectory(image)

include_directories(sort)
add_subdirectory(sort)