# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(Algorithm)

add_executable(qhull_run convex_hull/qhull_example.cpp)
add_executable(closest_pair_run closest_pair/closest_pair_example.cpp)
add_executable(triangulate_run triangulate/triangulate_example.cpp)
