# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(algo)

include_directories(minimum_spanning_tree)
add_subdirectory(minimum_spanning_tree)

include_directories(shortest_path)
add_subdirectory(shortest_path)

include_directories(nearest_neighbor)
add_subdirectory(nearest_neighbor)
