# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(algo)

add_executable(data_mining_kmeans_run kmeans_example.cpp)
target_link_libraries(data_mining_kmeans_run algo)