# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(algo)

add_executable(closest_pair_run closest_pair_example.cpp)
target_link_libraries(closest_pair_run algo)