# //////////////////////////////////////////////////////////
# author: alex011235
# https://github.com/alex011235/algorithm
# //////////////////////////////////////////////////////////
project(algo)

add_executable(shortest_path_run shortest_path_example.cpp)
target_link_libraries(shortest_path_run algo)